[gd_scene load_steps=3 format=3 uid="uid://gspcqeq024tv"]

[ext_resource type="Script" path="res://player/vr_controller.gd" id="1"]

[sub_resource type="SphereShape3D" id="1"]
radius = 0.1

[node name="VRController" type="XRController3D"]
script = ExtResource("1")

[node name="Mesh" type="MeshInstance3D" parent="."]
visible = false

[node name="MeshUpdateTimer" type="Timer" parent="."]
autostart = true

[node name="GrabRange" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.025, -0.05)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrabRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.025, -0.05)
shape = SubResource("1")

[connection signal="timeout" from="MeshUpdateTimer" to="." method="_on_mesh_update_timer_timeout"]
